// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cli-document-data create cjs document 1`] = `
Object {
  "Popover.data.ts": "export default {
  overview: {
    '1': {
      placement: 'bottom-end',
      trigger: 'hover',
    },
    '2': {
      placement: 'top-end',
      trigger: 'hover',
    },
    '3': {
      placement: 'bottom-end',
      trigger: 'click',
    },
    '4': {
      placement: 'right-end',
      trigger: 'hover',
    },
    '5': {
      placement: 'auto-start',
      trigger: 'right-click',
    },
  },
};
",
  "Popover.test.ts": "import * as path from 'path';
import { run, AxeResults } from 'axe-core';
import { reactRunDOM } from '@component-controls/test-renderers';
import '@component-controls/jest-axe-matcher';
import { loadConfigurations } from '@component-controls/config';
import { renderDocument } from '@component-controls/test-renderers';
import { render, act } from '@testing-library/react';
import { renderErr } from '@component-controls/test-renderers';

import * as examples from '../../../../ui/components/src/Popover/Popover.stories';
import data from './Popover.data';

describe('Popover', () => {
  const configPath = path.resolve(
    __dirname,
    '../../../../ui/components/.config',
  );
  const config = loadConfigurations(configPath);
  let renderedExamples: ReturnType<typeof renderDocument> = [];
  act(() => {
    renderedExamples = renderDocument(examples, config, data);
  });
  if (!renderedExamples) {
    renderErr();
    return;
  }
  renderedExamples.forEach(({ name, rendered, dataId, values }) => {
    describe(name, () => {
      const runTests = () => {
        it('snapshot', () => {
          const { asFragment } = render(rendered);
          expect(asFragment()).toMatchSnapshot();
        });
        it('accessibility', async () => {
          const axeResults = await reactRunDOM<AxeResults>(rendered, run);
          expect(axeResults).toHaveNoAxeViolations();
        });
      };
      if (dataId && values) {
        describe(dataId, runTests);
      } else {
        runTests();
      }
    });
  });
});
",
}
`;

exports[`cli-document-data create cjs document 2`] = `
Object {
  "VariantButton.data.js": "module.exports = {
  overview: {
    '1': {
      text: 'Bart Bechtelar',
      variant: 'error',
      fontSize: 17,
      icon: 'none',
      iconSide: 'right',
      iconSize: 'medium',
      padding: 'small',
    },
    '2': {
      text: 'Lula Rippin',
      variant: 'primary',
      fontSize: 13,
      icon: 'right-arrow',
      iconSide: 'left',
      iconSize: 'large',
      padding: 'small',
    },
    '3': {
      text: 'Kelvin Feeney',
      variant: 'accent',
      fontSize: 24,
      icon: 'search',
      iconSide: 'undefined',
      iconSize: 'undefined',
      padding: 'small',
    },
    '4': {
      text: 'Leslie Mohr',
      variant: 'disabled',
      fontSize: 13,
      icon: 'none',
      iconSide: 'undefined',
      iconSize: 'small',
      padding: 'small',
    },
    '5': {
      text: 'Mitchel Wisoky',
      variant: 'warning',
      fontSize: 18,
      icon: 'down-arrow',
      iconSide: 'undefined',
      iconSize: 'large',
      padding: 'undefined',
    },
    '6': {
      text: 'Jailyn Parisian',
      variant: 'primary',
      fontSize: 16,
      icon: 'left-arrow',
      iconSide: 'right',
      iconSize: 'small',
      padding: 'medium',
    },
    '7': {
      text: 'Cullen Heller',
      variant: 'warning',
      fontSize: 20,
      icon: 'search',
      iconSide: 'left',
      iconSize: 'medium',
      padding: 'undefined',
    },
    '8': {
      text: 'Roger Emard I',
      variant: 'warning',
      fontSize: 19,
      icon: 'left-arrow',
      iconSide: 'left',
      iconSize: 'medium',
      padding: 'large',
    },
    '9': {
      text: 'Annamarie Koelpin',
      variant: 'success',
      fontSize: 26,
      icon: 'search',
      iconSide: 'right',
      iconSize: 'medium',
      padding: 'medium',
    },
    '10': {
      text: 'Esta Yost',
      variant: 'primary',
      fontSize: 30,
      icon: 'left-arrow',
      iconSide: 'left',
      iconSize: 'medium',
      padding: 'small',
    },
  },
};
",
  "VariantButton.test.js": "const path = require('path');
const { run } = require('axe-core');
const { reactRunDOM } = require('@component-controls/test-renderers');
require('@component-controls/jest-axe-matcher');

const { loadConfigurations } = require('@component-controls/config');
const { renderDocument } = require('@component-controls/test-renderers');
const { render, act } = require('@testing-library/react');
const { renderErr } = require('@component-controls/test-renderers');

const examples = require('../../../../core/jest-extract/test/fixtures/story/VariantButton.docs');
const data = require('./VariantButton.data');

describe('VariantButton', () => {
  const configPath = path.resolve(__dirname, '../.config');
  const config = loadConfigurations(configPath);
  let renderedExamples = [];
  act(() => {
    renderedExamples = renderDocument(examples, config, data);
  });
  if (!renderedExamples) {
    renderErr();
    return;
  }
  renderedExamples.forEach(({ name, rendered, dataId, values }) => {
    describe(name, () => {
      const runTests = () => {
        it('snapshot', () => {
          const { asFragment } = render(rendered);
          expect(asFragment()).toMatchSnapshot();
        });
        it('accessibility', async () => {
          const axeResults = await reactRunDOM(rendered, run);
          expect(axeResults).toHaveNoAxeViolations();
        });
      };
      if (dataId && values) {
        describe(dataId, runTests);
      } else {
        runTests();
      }
    });
  });
});
",
}
`;

exports[`cli-document-data create enzyme document 1`] = `
Object {
  "VariantButton.data.ts": "export default {
  overview: {
    '1': {
      text: 'Larry Corkery PhD',
      variant: 'success',
      fontSize: 31,
      icon: 'undefined',
      iconSide: 'left',
      iconSize: 'medium',
      padding: 'large',
    },
    '2': {
      text: 'Noemie Beer',
      variant: 'success',
      fontSize: 23,
      icon: 'search',
      iconSide: 'undefined',
      iconSize: 'small',
      padding: 'large',
    },
  },
};
",
  "VariantButton.test.ts": "import * as path from 'path';
import { run, AxeResults } from 'axe-core';
import { reactRunDOM } from '@component-controls/test-renderers';
import '@component-controls/jest-axe-matcher';
import { loadConfigurations } from '@component-controls/config';
import { renderDocument } from '@component-controls/test-renderers';
import { mount, configure } from 'enzyme';
import toJson from 'enzyme-to-json';
import Adapter from '@wojtekmaj/enzyme-adapter-react-17';

configure({ adapter: new Adapter() });

import * as examples from '../../../../core/jest-extract/test/fixtures/story/VariantButton.docs';
import data from './VariantButton.data';

describe('VariantButton', () => {
  const configPath = path.resolve(__dirname, '../.config');
  const config = loadConfigurations(configPath);
  const renderedExamples = renderDocument(examples, config, data);
  renderedExamples.forEach(({ name, rendered, dataId, values }) => {
    describe(name, () => {
      const runTests = () => {
        it('snapshot', () => {
          const component = mount(rendered);
          expect(toJson(component, { mode: 'deep' })).toMatchSnapshot();
        });
        it('accessibility', async () => {
          const axeResults = await reactRunDOM<AxeResults>(rendered, run);
          expect(axeResults).toHaveNoAxeViolations();
        });
      };
      if (dataId && values) {
        describe(dataId, runTests);
      } else {
        runTests();
      }
    });
  });
});
",
}
`;

exports[`cli-document-data create esm document 1`] = `
Object {
  "VariantButton.data.js": "export default {
  overview: {
    '1': {
      text: 'Alvena Bahringer',
      variant: 'disabled',
      fontSize: 23,
      icon: 'left-arrow',
      iconSide: 'undefined',
      iconSize: 'undefined',
      padding: 'large',
    },
    '2': {
      text: 'Dawn Gerlach DDS',
      variant: 'error',
      fontSize: 15,
      icon: 'down-arrow',
      iconSide: 'undefined',
      iconSize: 'undefined',
      padding: 'medium',
    },
  },
};
",
  "VariantButton.test.js": "import * as path from 'path';
import { run } from 'axe-core';
import { reactRunDOM } from '@component-controls/test-renderers';
import '@component-controls/jest-axe-matcher';
import { loadConfigurations } from '@component-controls/config';
import { renderDocument } from '@component-controls/test-renderers';
import { render, act } from '@testing-library/react';
import { renderErr } from '@component-controls/test-renderers';

import * as examples from '../../../../core/jest-extract/test/fixtures/story/VariantButton.docs';
import data from './VariantButton.data';

describe('VariantButton', () => {
  const configPath = path.resolve(__dirname, '../.config');
  const config = loadConfigurations(configPath);
  let renderedExamples = [];
  act(() => {
    renderedExamples = renderDocument(examples, config, data);
  });
  if (!renderedExamples) {
    renderErr();
    return;
  }
  renderedExamples.forEach(({ name, rendered, dataId, values }) => {
    describe(name, () => {
      const runTests = () => {
        it('snapshot', () => {
          const { asFragment } = render(rendered);
          expect(asFragment()).toMatchSnapshot();
        });
        it('accessibility', async () => {
          const axeResults = await reactRunDOM(rendered, run);
          expect(axeResults).toHaveNoAxeViolations();
        });
      };
      if (dataId && values) {
        describe(dataId, runTests);
      } else {
        runTests();
      }
    });
  });
});
",
}
`;

exports[`cli-document-data create rtr document 1`] = `
Object {
  "VariantButton.data.ts": "export default {
  overview: {
    '1': {
      text: 'Sandrine Pagac',
      variant: 'undefined',
      fontSize: 23,
      icon: 'down-arrow',
      iconSide: 'left',
      iconSize: 'medium',
      padding: 'large',
    },
    '2': {
      text: 'Lori Cassin',
      variant: 'warning',
      fontSize: 30,
      icon: 'down-arrow',
      iconSide: 'undefined',
      iconSize: 'small',
      padding: 'large',
    },
  },
};
",
  "VariantButton.test.ts": "import * as path from 'path';
import { run, AxeResults } from 'axe-core';
import { reactRunDOM } from '@component-controls/test-renderers';
import '@component-controls/jest-axe-matcher';
import { loadConfigurations } from '@component-controls/config';
import { renderDocument } from '@component-controls/test-renderers';
import renderer, { act } from 'react-test-renderer';
import { renderErr, componentErr } from '@component-controls/test-renderers';

import * as examples from '../../../../core/jest-extract/test/fixtures/story/VariantButton.docs';
import data from './VariantButton.data';

describe('VariantButton', () => {
  const configPath = path.resolve(__dirname, '../.config');
  const config = loadConfigurations(configPath);
  let renderedExamples: ReturnType<typeof renderDocument> = [];
  act(() => {
    renderedExamples = renderDocument(examples, config, data);
  });
  if (!renderedExamples.length) {
    renderErr();
    return;
  }
  renderedExamples.forEach(({ name, rendered, dataId, values }) => {
    describe(name, () => {
      const runTests = () => {
        it('snapshot', () => {
          const component = renderer.create(rendered);
          if (!component) {
            componentErr();
            return;
          }
          expect(component.toJSON()).toMatchSnapshot();
        });
        it('accessibility', async () => {
          const axeResults = await reactRunDOM<AxeResults>(rendered, run);
          expect(axeResults).toHaveNoAxeViolations();
        });
      };
      if (dataId && values) {
        describe(dataId, runTests);
      } else {
        runTests();
      }
    });
  });
});
",
}
`;

exports[`cli-document-data create typescript document 1`] = `
Object {
  "VariantButton.data.ts": "export default {
  overview: {
    '1': {
      text: 'Darren Farrell',
      variant: 'success',
      fontSize: 19,
      icon: 'none',
      iconSide: 'left',
      iconSize: 'medium',
      padding: 'medium',
    },
    '2': {
      text: 'Miss Nat Reilly',
      variant: 'success',
      fontSize: 25,
      icon: 'none',
      iconSide: 'undefined',
      iconSize: 'medium',
      padding: 'small',
    },
  },
};
",
  "VariantButton.test.ts": "import * as path from 'path';
import { run, AxeResults } from 'axe-core';
import { reactRunDOM } from '@component-controls/test-renderers';
import '@component-controls/jest-axe-matcher';
import { loadConfigurations } from '@component-controls/config';
import { renderDocument } from '@component-controls/test-renderers';
import { render, act } from '@testing-library/react';
import { renderErr } from '@component-controls/test-renderers';

import * as examples from '../../../../core/jest-extract/test/fixtures/story/VariantButton.docs';
import data from './VariantButton.data';

describe('VariantButton', () => {
  const configPath = path.resolve(__dirname, '../.config');
  const config = loadConfigurations(configPath);
  let renderedExamples: ReturnType<typeof renderDocument> = [];
  act(() => {
    renderedExamples = renderDocument(examples, config, data);
  });
  if (!renderedExamples) {
    renderErr();
    return;
  }
  renderedExamples.forEach(({ name, rendered, dataId, values }) => {
    describe(name, () => {
      const runTests = () => {
        it('snapshot', () => {
          const { asFragment } = render(rendered);
          expect(asFragment()).toMatchSnapshot();
        });
        it('accessibility', async () => {
          const axeResults = await reactRunDOM<AxeResults>(rendered, run);
          expect(axeResults).toHaveNoAxeViolations();
        });
      };
      if (dataId && values) {
        describe(dataId, runTests);
      } else {
        runTests();
      }
    });
  });
});
",
}
`;
